--- a/mysboot-server/src/main/resources/bootstrap.yml
+++ b/mysboot-server/src/main/resources/bootstrap.yml
@@ -9,3 +9,7 @@ spring:
         prefix: mysboot-server
   profiles:
     active: dev
+
+mysboot-order:
+  ribbon:
+    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
